[project]
name = "scale_core"
version = "0.1.0"
description = "The basic utilities for working with the scale framework"
authors = [
    {name = "Johan Cobo", email = "johancobo236@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
